attempted fix for issue on mobile

--- a/style.css
+++ b/style.css
@@ -1098,11 +1098,10 @@ h1 {
 
     #page-mode,
     #pagination-controls,
-    #import-items,
     #export-items,
     #add-item,
     #untagged-filter {
-        display: none;
+        display: none !important;
     }
 
 }
